objects/vlocity_cmt__PaymentMethod__c.object
<CustomObject>
    <description>Payment Method stores credit card or other payment processing information for an account.</description>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Methods</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BankAccountNumber__c</fullName>
        <label>Bank Account Number</label>
        <length>31</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BankAccountType__c</fullName>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CardHolderName__c</fullName>
        <label>Card Holder Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CardNumber__c</fullName>
        <label>Card Number</label>
        <length>16</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CardType__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VISA</fullName>
                </value>
                <value>
                    <fullName>Master Card</fullName>
                </value>
                <value>
                    <fullName>DISCOVER</fullName>
                </value>
                <value>
                    <fullName>UCB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExpirationMonth__c</fullName>
        <label>Expiration Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExpirationYear__c</fullName>
        <label>Expiration Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Last4Numbers__c</fullName>
        <label>Last4Numbers</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MethodType__c</fullName>
        <label>Method Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                    <default>true</default>
                    <label>Credit Card</label>
                </value>
                <value>
                    <fullName>Bank Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RoutingTransitNumber__c</fullName>
        <label>Routing Transit Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>Payment Method</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Payment Method Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>vlocity_cmt__EnforceActivePaymentMethodInAutoPay</fullName>
        <active>true</active>
        <errorConditionFormula>Id = vlocity_cmt__AccountId__r.vlocity_cmt__AutoPaymentMethodId__c &amp;&amp; ! vlocity_cmt__IsActive__c &amp;&amp; Id != null</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__IsActive__c</errorDisplayField>
        <errorMessage>This payment method is used in auto pay and it can&apos;t be inactivated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__ExpirationYearIsValid</fullName>
        <active>true</active>
        <description>Check that ExpirationYear is a valid year and in the future</description>
        <errorConditionFormula>AND( (ISPICKVAL(vlocity_cmt__MethodType__c,&apos;Credit Card&apos;)),(OR(!ISNUMBER(vlocity_cmt__ExpirationYear__c), VALUE(vlocity_cmt__ExpirationYear__c)&lt; YEAR( TODAY() ))))</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__ExpirationYear__c</errorDisplayField>
        <errorMessage>Expiration Year is not valid</errorMessage>
    </validationRules>
</CustomObject>